--- a/index.html
+++ b/index.html
@@ -3,12 +3,82 @@
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    Hello World!
+    <div class="container">
+      <head>
+        <h1 id="title" class="text-center">Survey Form</h1>
+        <p id="description" class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+      </head>
+      <main>
+        <form action="" id="survey-form">
+          <div>
+            <label for="name" id="name-label" class="form-label">Name:</label>
+           <input type="text" id="name" class="form-control" required placeholder="Name"> 
+          </div>
+          <div class="mt-3">
+            <label for="email" id="email-label" class="form-label">Email:</label>
+          <input type="email" id="email" class="form-control" required placeholder="Email">
+          </div>
+          <div class="mt-3">
+            <label for="number" id="number-label" class="form-label">Age:</label>
+          <input
+          class="form-control"
+            type="number"
+            id="number"
+            name="age"
+            min="10"
+            max="99"
+            placeholder="Age"
+          >
+          </div>
+          
+          <div class="mt-3">
+            <select name="" id="dropdown" class="form-control">
+              <option value="">Student</option>
+              <option value="">Full Time</option>
+              <option value="">Part Time</option>
+            </select>
+          </div>
+          
+          <div class="mt-3">
+            <div>
+              <input type="radio" name="op" id="maybe" value="Maybe" class="form-check-input">
+              <label for="maybe" class="form-check-label">Maybe </label>
+            </div>
+            <div>
+              <input type="radio" name="op" id="not" value="Not Sure" class="form-check-input">
+              <label for="not" class="form-check-label">Not Sure </label>
+            </div>
+            <div>
+              <input type="radio" name="op" id="sure" value="Sure" class="form-check-input">
+              <label for="sure" class="form-check-label">Sure </label>
+            </div>
+          </div>
+          <div class="mt-4 mb-4">
+            <div>
+              <input type="checkbox" name="front-end" id="font-end" value="Frond-End" class="form-check-input">
+              <label for="front-end" class="form-check-label">Front End</label>
+            </div>
+            <div>
+              <input type="checkbox" name="back-end" id="font-end" value="Frond-End" class="form-check-input">
+              <label for="back-end" class="form-check-label">Back End</label>
+            </div>
+            <div>
+              <input type="checkbox" name="front-end" id="full-stack" value="Frond-End" class="form-check-input">
+              <label for="full-stack" class="form-check-label">Full Stack</label>
+            </div>
+          </div>
+          <textarea name="" id="" cols="30" rows="10" class="form-control mb-4"></textarea>
+          <input type="submit" id="submit" class="btn btn-outline-primary">
+        </form>
+      </main>
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   </body>
