--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Survey Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <div class="container">
-      <div class="card border-success mt-5"> 
+      <div class="card border-success mt-5 mb-5"> 
           <div class="card-header">
             <h1 id="title" class="text-center mt-4">Survey Form</h1>
             <p id="description" class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
